Fix chat wrapping

--- a/DuckDuckShoot/Content/Site.css
+++ b/DuckDuckShoot/Content/Site.css
@@ -89,6 +89,7 @@ margin-top:-15px;
     padding-left: 5px;
     padding-right: 5px;
     background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.05));
+    word-wrap: break-word;
 }
 
 #chat {
@@ -96,8 +97,7 @@ margin-top:-15px;
     max-height:100%;
     position:absolute;
     bottom:0px;
-        
-    word-wrap: break-word;
+    white-space: initial;
     overflow-y: auto;
 }
 
